--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ $(function(){var e=[{color:"#E6E6E6",from:Date.UTC(1873,9),to:Date.UTC(1879,2)},
         <span class="gpct">0.78</span>
       </div>
       <div class="cell">
-        <span class="rpct">−6-65</span>
+        <span class="rpct">−6.65</span>
       </div>
       <div class="cell" title="Market Value: $7.70T">
         1.34
